# trellis

./: .envrc  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  in-progress-review.md  justfile  package-lock.json  pixi.toml  pydoc-markdown.yaml  pyproject.toml  pyrightconfig.json  state-helpers.local.code-workspace  tsconfig.json
.github/workflows/: ci.yml  docs.yml  playground.yml
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/design/: design.md
docs/docs/: building-uis.mdx  concepts.mdx  intro.mdx  patterns.mdx  quickstart.md  theming.mdx
docs/docs/design/: _category_.json  css.md  desktop-app.md  hot-reload.md  html-components.md  imperative-api.md  overview.md  platforms.md  playground.md  router.md  security.md  state.md  ui-rendering.md  web-server.md  widgets.md
docs/planning/: api_example.py  complexity-analysis.md  component_tree.py  conditional-children-issue.md  design.md  element-rendering-refactor.md  inline-docs-cleanup.md  mutable-state.md  position-ids-implementation-status.md  react_integration.py  render-tree-decomposition.md  rendering-refactor-plan.md  router-implementation.md  test-inventory-results.md  test-inventory.md  test-platform.md  test-refactor-plan.md  test-reorganization.md  testid-fluent-api.md  todo-app-poc-todo.md  trellis-diffing-architecture.md  weakref-dependency-cleanup.md
docs/planning/likec4/: trellis.c4
docs/plans/: 2026-03-05-html-ir-codegen-design.md  2026-03-05-html-ir-codegen-implementation-plan.md  2026-03-08-js-proxy-initial-slice.md  desktop-harness.md  html-codegen-usage.md
docs/reference/: trellis-core.md
docs/src/css/: custom.css
docs/src/lib/: pyodide-init.ts
docs/static/playground/: README.md  index.html  package-lock.json  package.json  tsconfig.json
docs/trellis-lib/: pyproject.toml  trellis_config.py
docs/trellis-lib/trellis_lib/: __init__.py
examples/: all_sliders_all_the_time.py  demo.py  widget_showcase.py
examples/breakfast_todo/: __main__.py  app.py  components.py  pyproject.toml  trellis_config.py
examples/breakfast_todo/breakfast_todo/: __init__.py  app.py  components.py  state.py
examples/hello_server/: __main__.py
examples/hello_world/: __main__.py  counter.py  hello_world.py  pyproject.toml  trellis_config.py
examples/hello_world/hello_world/: __init__.py  app.py
examples/html_studio/: pyproject.toml  trellis_config.py
examples/html_studio/html_studio/: __init__.py  __main__.py  app.py
examples/js_global_demo/: pyproject.toml  trellis_config.py
examples/js_global_demo/js_global_demo/: __init__.py  app.py
examples/js_global_demo/js_global_demo/client/: __init__.py  callback_helpers.ts
examples/js_handle_demo/: pyproject.toml  trellis_config.py
examples/js_handle_demo/js_handle_demo/: __init__.py  app.py
examples/js_handle_demo/js_handle_demo/client/: __init__.py  handle_helpers.ts
examples/js_proxy_demo/: pyproject.toml  trellis_config.py
examples/js_proxy_demo/js_proxy_demo/: __init__.py  app.py
examples/js_proxy_demo/js_proxy_demo/client/: __init__.py  demo_api.ts
examples/router_demo/: __init__.py  __main__.py  app.py  pyproject.toml  trellis_config.py
examples/router_demo/router_demo/: __main__.py  app.py
examples/shadcn_smoke/: pyproject.toml  trellis_config.py
examples/shadcn_smoke/shadcn_smoke/: __init__.py  app.py
examples/sliders/: pyproject.toml  sliders.py  trellis.py  trellis_config.py
examples/sliders/sliders/: __init__.py  app.py
examples/todo_example/: __init__.py  __main__.py  app.py  components.py  state.py
examples/widget_showcase/: __init__.py  __main__.py  app.py  components.py  example.py  pyproject.toml  state.py  trellis_config.py
examples/widget_showcase/sections/: __init__.py  actions.py  buttons.py  charts.py  data.py  feedback.py  forms.py  icons.py  layout.py  navigation.py  progress.py  status.py  tables.py  tooltips.py  typography.py
examples/widget_showcase/widget_showcase/: app.py  components.py  example.py
examples/widget_showcase/widget_showcase/sections/: __init__.py  actions.py  charts.py  css.py  data.py  desktop.py  feedback.py  forms.py  keyboard.py  layout.py  navigation.py  status.py  tables.py  tooltips.py  typography.py
frontend/trellis-widgets/: components.json  package.json  tsconfig.json
playground/: README.md  package.json  tsconfig.json
playground/src/: main.tsx
scripts/: generate-example-pages.py  generate_hotkey_types.py  install-npm-deps.sh
src/trellis/: __init__.py  __main__.py  bundler.py  cli.py  icons.py
src/trellis/app/: __init__.py  app.py  apploader.py  client_state.py  config.py  configvars.py  entry.py  (+3 more)
src/trellis_playground/: __init__.py  runtime.py
tests/: CLAUDE.md  __init__.py  conftest.py  helpers.py  test_base.py  test_block_component.py  test_bundler.py  test_client_state.py  test_composition_component.py  test_context.py  test_deep_trees.py  test_efficient_updates.py  test_element_unit.py  test_event_handling.py  test_fine_grained_classes.py  test_functional_component.py  test_html.py  test_message_handler.py  test_message_handler_integration.py  test_messages.py  test_mutable.py  test_patch_ordering.py  test_ports.py  test_react_component.py  test_reconcile.py  test_reconcile_edge_cases.py  test_reconciler.py  test_render_session_unit.py  test_rendering.py  test_rendering_integration.py  test_serialization.py  test_serve_platform.py  test_state.py  test_state_edge_cases.py  test_style_props.py  test_theme_switcher.py  test_tracked.py  test_tracked_dependency.py  test_tracked_mutations.py  test_trellis.py  (+7 more)
tests/e2e/: __init__.py  _run_test_server.py  check_hydration.js  conftest.py  desktop_harness.py  test_desktop_markdown_links.py  test_keyboard.py  test_ssr_hydration.py
tests/integration/: test_bundler.py
tests/js/: ClientMessageHandler.test.ts  package-lock.json  package.json  test-setup.ts  test-utils.tsx  trellis-test-utils.ts  vitest.config.ts
tools/html_codegen/: README.md  package-lock.json  package.json  tsconfig.json
(+555 files in other folders)
