[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trellis"
version = "0.1.0"
description = "A reactive UI framework for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Emma Powers", email = "emma@emmaponders.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    # Core deps (work in both server and browser/Pyodide)
    "rich>=13.9",
    # Pygments is required by rich for traceback syntax highlighting. Normally
    # installed as a transitive dependency, but Pyodide's pre-built rich package
    # declares no dependencies in pyodide-lock.json, so we must list it explicitly.
    "pygments>=2.19",
    "msgspec>=0.19",
    "httpx>=0.28",
    "jinja2>=3.1",
    "packaging>=24.0",
    # Server-only deps (excluded in Pyodide via PEP 508 markers)
    "fastapi>=0.128; sys_platform != 'emscripten'",
    "uvicorn[standard]>=0.40; sys_platform != 'emscripten'",
    "click>=8.3; sys_platform != 'emscripten'",
    "click-option-group>=0.5.6; sys_platform != 'emscripten'",
    "jurigged>=0.6.0; sys_platform != 'emscripten'",
    "questionary>=2.1; sys_platform != 'emscripten'",
    "watchfiles>=1.1; sys_platform != 'emscripten'",
    # Icon format conversion (SVG rasterization, ICO/ICNS generation)
    "Pillow>=10.0; sys_platform != 'emscripten'",
    "resvg-py>=0.2; sys_platform != 'emscripten'",
    # Bundler uses `pip wheel` to build wheels for Pyodide deployment
    "pip>=24; sys_platform != 'emscripten'",
]

[project.optional-dependencies]
desktop = [
    "pytauri-wheel>=0.8.0",
    "pydantic>=2.12",
    "pyinstaller>=6.12",
]

[dependency-groups]
dev = [
    "ruff>=0.8,<1",
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "basedpyright>=1.38,<2",
    "pydoc-markdown>=4.8,<5",
    "types-Pillow>=10.0",
    "pybun>=1.3.10",
    "rust-just>=1.46",
    "playwright>=1.57.0,<2",
]
desktop = [
    {include-group = "dev"},
    "trellis[desktop]",
]

[project.urls]
Repository = "https://github.com/emmapowers/trellis"
Issues = "https://github.com/emmapowers/trellis/issues"

[project.scripts]
trellis = "trellis.cli:trellis"

[tool.hatch.build.targets.wheel]
packages = ["src/trellis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv"

[tool.coverage.run]
source = ["src/trellis"]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["docs/", "examples/*/pyproject.toml"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "PL",     # pylint
    "DTZ",    # flake8-datetimez
    "RUF",    # ruff-specific rules
    "FURB",   # refurb
    "PERF",   # perflint
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TC",     # flake8-type-checking
    "PT",     # flake8-pytest-style
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "TID",    # flake8-tidy-imports
]
ignore = [
    "E501",     # line too long (black handles this)
    "PLR0912",  # too-many-branches
    "PLR0915",  # too-many-statements
    "PLR0913",  # too-many-arguments
    "TC001",    # type-checking block
    "TC003",    # type-checking block - standard library
    "F403",     # star imports - used intentionally in __init__.py
    "SLF001",   # private member access - needed for descriptor protocol
    "PLW0603",  # global statement - needed for render context
    "UP046",    # generic class style - defer to later cleanup
    "UP047",    # generic function style - defer to later cleanup
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004",  # magic values in tests are idiomatic
    "PT018",    # compound assertions are common in tests
    "RET504",   # intermediate variable before return aids readability in tests
    "RUF005",   # list concatenation is clearer than spread in tests
    "RUF001",   # Unicode characters intentional (e.g. × for close button)
    "RUF012",   # Stateful classes intentionally use mutable defaults
    "TC002",    # pytest type annotations are common in tests
    "TID252",   # relative imports in test helpers
]
"examples/**" = [
    "TID252",   # relative imports in examples are fine
]

