[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trellis-lib"
version = "0.1.0"
description = "Browser library build for playground and docs"
requires-python = ">=3.13"
dependencies = [
    "trellis @ {root:parent:parent:uri}",
]

[tool.hatch.metadata]
allow-direct-references = true
