[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-world"
version = "0.1.0"
description = "A simple interactive counter demo"
requires-python = ">=3.13"
dependencies = [
    "trellis @ {root:parent:parent:uri}",
]

[tool.hatch.metadata]
allow-direct-references = true
