[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "html-studio"
version = "0.1.0"
description = "Demonstrates semantic trellis.html authoring with typed CSS"
requires-python = ">=3.13"
dependencies = [
    "trellis @ {root:parent:parent:uri}",
]

[tool.hatch.metadata]
allow-direct-references = true
