[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "js-global-demo"
version = "0.1.0"
description = "A Trellis demo for browser global JavaScript proxies"
requires-python = ">=3.13"
dependencies = [
    "trellis @ {root:parent:parent:uri}",
]

[tool.hatch.metadata]
allow-direct-references = true
