[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "js-proxy-demo"
version = "0.1.0"
description = "A Trellis demo for bundled JavaScript proxy objects"
requires-python = ">=3.13"
dependencies = [
    "trellis @ {root:parent:parent:uri}",
]

[tool.hatch.metadata]
allow-direct-references = true
