[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "router-demo"
version = "0.1.0"
description = "Client-side routing demo for Trellis"
requires-python = ">=3.13"
dependencies = [
    "trellis @ {root:parent:parent:uri}",
]

[tool.hatch.metadata]
allow-direct-references = true
