[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shadcn-smoke"
version = "0.1.0"
description = "Minimal smoke app for the new shadcn-backed widget system"
requires-python = ">=3.13"
dependencies = [
    "trellis @ {root:parent:parent:uri}",
]

[tool.hatch.metadata]
allow-direct-references = true
