[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sliders"
version = "0.1.0"
description = "A slider performance demo"
requires-python = ">=3.13"
dependencies = [
    "trellis @ {root:parent:parent:uri}",
]

[tool.hatch.metadata]
allow-direct-references = true
