[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "widget-showcase"
version = "0.1.0"
description = "Demonstrates all available Trellis widgets"
requires-python = ">=3.13"
dependencies = [
    "trellis @ {root:parent:parent:uri}",
]

[tool.hatch.metadata]
allow-direct-references = true
